# marathon_arg_solver

./: .gitignore  README.md  pyproject.toml
matchtile/: __init__.py  __main__.py  autoplay.py  calibration_store.py  capture.py  cli.py  config.py  debug_grid.py  models.py  overlay.py  phantom_board.py  runtime_control.py  session.py  vision.py  windowing.py
plans/: PLAN - Generalize Match Groups To 2-4 Members.md
sample_session/20260319-152106/: calibration.json  capture.json  result.json  solve_order.txt
tests/: test_autoplay.py  test_cli.py  test_config.py  test_phantom_board.py  test_vision.py
